# organized-crime-fighting-simulation

./: .gitignore  CMakeLists.txt  build.sh  config.json  config.txt
.github/workflows/: cmake-single-platform.yml  cmake-single-platform_ss.yml
cmake/: tests.cmake
include/: actual_gang_member.h  config.h  game.h  gang.h  message.h  police.h  random.h  secret_agent.h  secret_agent_utils.h  semaphores_utils.h  shared_mem_utils.h  success_rate.h  target_selection.h
include/json/: json-config.h
src/: CMakeLists.txt  game.c  main.c
src/gang/: CMakeLists.txt  actual_gang_member.c  gang.c  information_spreading.c  secret_agent.c  secret_agent_utils.c  success_rate.c  target_selection.c
src/graphics/: CMakeLists.txt  animation.c  graphics.c
src/json/: CMakeLists.txt  json-config.c
src/police/: CMakeLists.txt  police.c  police_officer.c
src/utils/: CMakeLists.txt  config.c  message_queue_utils.c  random.c  secret_agent_utils.c  semaphores_utils.c  shared_mem_utils.c  success_rate.c
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_config.cpp  test_json.cpp
